Fix layout issue with flex-grid inside constrained column

--- a/assets/sass/scaffolding/_grid.scss
+++ b/assets/sass/scaffolding/_grid.scss
@@ -13,6 +13,8 @@ $flexGridSpacing: $spacingUnit;
  */
 .flex-grid {
     @include reset-list();
+    // Overrides constrained content containers
+    max-width: 100% !important;
 
     @include mq('medium-minor') {
         display: flex;
